<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context=".kategorija_otpada">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include4"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/blue_can"
                    android:layout_marginBottom="30dp"/>

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/green_can" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/yellow_can"
                    android:layout_marginTop="60dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="2dp"
                    android:text="@string/u_plave_kontejnere_se_odla_u"
                    android:textColor="@color/mainHubBlue"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/blueText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:paddingBottom="30dp"
                    android:text="@string/novine_asopisi_katalozi_nsveske_knjige_slikovnice_npisa_i_i_kompjuterski_papir_pisma_papirnate_vre_ice_nmape_kartonske_fascikle_kartonske_kutije_bez_ljepljive_trake_plastike_stiropora_i_dr_n_nu_plave_kontejnere_ne_smiju_se_odlagati_indigo_papir_ugljeni_papir_fotografije_i_foto_papir_zauljeni_i_prljavi_papir_gumirane_etikete_pelene_i_sl"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/greenHeadline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:text="@string/u_zelene_kontejnere_se_odla_e_samo_staklena_ambala_a_boce_tegle_i_sl"
                    android:textColor="@color/mainHubGreen"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/greenText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:paddingBottom="30dp"
                    android:text="U zelene kontejnere ne smiju se odlagati:\nprozorsko staklo,automobilskostaklo,kristalno i optičko staklo,armirano staklo,staklena vuna;\nsijalice i fluorescentne svjetiljke;\nporculanski i keramički predmeti.\nRavno prozorsko staklo se odlaže isključivo u reciklažna dvorišta."
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/yellowHeadline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:text="@string/u_ute_kontejnere_se_odla_u"
                    android:textColor="@color/mainHubYellow"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/yellowText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:text="plastične vrećice, folije, mjehurasta ambalaža;\nplastične boce od jestivog ulja, destilirane vode, sredstava za čišćenje i pranje, kozmetike, lijekova, prehrambenih proizvoda;\nčaše i posude od jogurta, sira;\npjenasta i zaštitna ambalaža za razne prehrambene proizvode;\nostali proizvodi od plastike: boce od sokova, čepovi, plastični tanjiri, pribor za jelo."
                    android:textSize="15sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/include4"
        layout="@layout/toolbar" />


</androidx.constraintlayout.widget.ConstraintLayout>
